src/objects/bizible2__Bizible_Person__c.object
<CustomObject>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Gets Account Owner from the Contact Object</description>
        <formula>(bizible2__Contact__r.Contact_Account_Owner__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gets Account Owner from the Contact Object</inlineHelpText>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acquisition_Date__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Gets Acquisition Date from the Contact Object or the Lead Object</description>
        <formula>IF(NOT(ISBLANK (bizible2__Contact__c)), (bizible2__Contact__r.mkto71_Acquisition_Date__c),(bizible2__Lead__r.mkto71_Acquisition_Date__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gets Acquisition Date from the Contact Object or the Lead Object</inlineHelpText>
        <label>Acquisition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Acquisition_Program__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Gets Acquisition Program from the Contact Object or the Lead Object</description>
        <formula>IF
(NOT(ISBLANK (bizible2__Contact__c )),
(bizible2__Contact__r.mkto71_Acquisition_Program__c ),
(bizible2__Lead__r.mkto71_Acquisition_Program__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gets Acquisition Program from the Contact Object or the Lead Object</inlineHelpText>
        <label>Acquisition Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue_Range__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Gets Annual Revenue Range from the Contact Object or the Lead Object</description>
        <formula>IF
(NOT(ISBLANK (bizible2__Contact__c )),
TEXT(bizible2__Contact__r.Account.Account_Revenue__c ),
TEXT(bizible2__Lead__r.neo_account_revenue__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gets Annual Revenue Range ($) from the Contact Object or the Lead Object</inlineHelpText>
        <label>Annual Revenue Range ($)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Date__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Gets Closed Lost Date from the Contact Object or the Lead Object</description>
        <formula>IF(NOT(ISBLANK ( bizible2__Contact__c )), (bizible2__Contact__r.Closed_Lost_Date__c),(bizible2__Lead__r.Closed_Lost_Date__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gets Closed Lost Date from the Contact Object or the Lead Object</inlineHelpText>
        <label>Closed Lost Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_Lost__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a Closed Lost Date value from the corresponding field on the Contact Object and marks this field as TRUE it if it exists.</description>
        <formula>NOT ( ISBLANK (Closed_Lost_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a Closed Lost Date value from the corresponding field on the Contact Object and marks this field as TRUE it if it exists.</inlineHelpText>
        <label>Closed Lost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_Won_Date__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a Closed Won Date value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</description>
        <formula>IF(NOT(ISBLANK ( bizible2__Contact__c )), (bizible2__Contact__r.Closed_Won_Date__c),(bizible2__Lead__r.Closed_Won_Date__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a Closed Won Date value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</inlineHelpText>
        <label>Closed Won Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_Won__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a Closed Won value from the corresponding field on the Contact Object and marks this field as TRUE it if it exists.</description>
        <formula>NOT ( ISBLANK (Closed_Won_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a Closed Won value from the corresponding field on the Contact Object and marks this field as TRUE it if it exists.</inlineHelpText>
        <label>Closed Won</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discipline__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a Discipline value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</description>
        <formula>IF
(NOT(ISBLANK (bizible2__Contact__c )),
TEXT(bizible2__Contact__r.Discipline__c ),
TEXT(bizible2__Lead__r.Discipline__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a Discipline value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</inlineHelpText>
        <label>Discipline</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disqualified_Date__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a Disqualified Date value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</description>
        <formula>IF(NOT(ISBLANK ( bizible2__Contact__c )), (bizible2__Contact__r.Disqualified_Date__c),(bizible2__Lead__r.Disqualified_Date__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a Disqualified Date value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</inlineHelpText>
        <label>Disqualified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disqualified__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a Disqualified value from the corresponding field on the Contact Object and marks this field as TRUE it if it exists.</description>
        <formula>NOT ( ISBLANK (Disqualified_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a Disqualified value from the corresponding field on the Contact Object and marks this field as TRUE it if it exists.</inlineHelpText>
        <label>Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fast_Tracked__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a Fast-Tracked value from the corresponding field on the Contact Object and marks this field as TRUE it if it exists.</description>
        <formula>IF
(NOT(ISBLANK (bizible2__Contact__c )),
(bizible2__Contact__r.Fast_Track__c ),
(bizible2__Lead__r.Fast_Track__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a Fast-Tracked value from the corresponding field on the Contact Object and marks this field as TRUE it if it exists.</inlineHelpText>
        <label>Fast-Tracked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Global_Territory__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a Global Territory value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</description>
        <formula>IF
(NOT(ISBLANK (bizible2__Contact__c )),
(bizible2__Contact__r.Global_Territory_Contact__c ),
(bizible2__Lead__r.Global_Territory__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a Global Territory value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</inlineHelpText>
        <label>Global Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Core_Country__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Will populate true if either the related Contact object or Lead object field is marked true</description>
        <formula>IF(NOT(ISBLANK (bizible2__Contact__c)), (bizible2__Contact__r.In_Core_Country__c),(bizible2__Lead__r.In_Core_Country__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Will populate true if either the related Contact object or Lead object field is marked true</inlineHelpText>
        <label>In Core Country</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a Industry value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</description>
        <formula>IF
(NOT(ISBLANK (bizible2__Contact__c )),
TEXT(bizible2__Contact__r.Account.Industry ),
TEXT(bizible2__Lead__r.Industry ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a Industry value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</inlineHelpText>
        <label>Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inquiry_Date__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a Inquiry Date value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</description>
        <formula>IF(NOT(ISBLANK ( bizible2__Contact__c )), (bizible2__Contact__r.Inquiry_Original_Date__c),(bizible2__Lead__r.Inquiry_Original_Date__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a Inquiry Date value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</inlineHelpText>
        <label>Inquiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inquiry_Original_Date__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a Inquiry Original Date value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</description>
        <formula>IF
(NOT(ISBLANK (bizible2__Contact__c )),
(bizible2__Contact__r.Inquiry_Original_Date__c ),
(bizible2__Lead__r.Inquiry_Original_Date__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a Inquiry Original Date value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</inlineHelpText>
        <label>Inquiry Original Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inquiry__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a Inquiry value from the corresponding field on the Contact Object and marks this field as TRUE it if it exists.</description>
        <formula>NOT ( ISBLANK (Inquiry_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a Inquiry value from the corresponding field on the Contact Object and marks this field as TRUE it if it exists.</inlineHelpText>
        <label>Inquiry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a Job Function value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</description>
        <formula>IF
(NOT(ISBLANK (bizible2__Contact__c )),
TEXT(bizible2__Contact__r.Job_Function__c ),
TEXT(bizible2__Lead__r.Job_Function__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a Job Function value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</inlineHelpText>
        <label>Job Function</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Level__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a Job Level value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</description>
        <formula>IF
(NOT(ISBLANK (bizible2__Contact__c )),
TEXT(bizible2__Contact__r.Job_Level__c ),
TEXT(bizible2__Lead__r.Job_Level__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a Job Level value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</inlineHelpText>
        <label>Job Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a Job Title value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</description>
        <formula>IF(NOT(ISBLANK (bizible2__Contact__c )), (bizible2__Contact__r.Title),(bizible2__Lead__r.Title) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a Job Title value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</inlineHelpText>
        <label>Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Touch_Inquiry__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a Last Touch Inquiry value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</description>
        <formula>IF
(NOT(ISBLANK (bizible2__Contact__c )),
(bizible2__Contact__r.Last_Touch_Inquiry__c ),
(bizible2__Lead__r.Last_Touch_Inquiry__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a Last Touch Inquiry value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</inlineHelpText>
        <label>Last Touch Inquiry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Touch_MQL__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a Last Touch MQL value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</description>
        <formula>IF
(NOT(ISBLANK (bizible2__Contact__c )),
(bizible2__Contact__r.Last_Touch_MQL__c ),
(bizible2__Lead__r.Last_Touch_MQL__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a Last Touch MQL value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</inlineHelpText>
        <label>Last Touch MQL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Touch_SAL__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a Last Touch SAL value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</description>
        <formula>IF
(NOT(ISBLANK (bizible2__Contact__c )),
(bizible2__Contact__r.Last_Touch_SAL__c ),
(bizible2__Lead__r.Last_Touch_SAL__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a Last Touch SAL value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</inlineHelpText>
        <label>Last Touch SAL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Touch_SQL__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a Last Touch SQL value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</description>
        <formula>IF
(NOT(ISBLANK (bizible2__Contact__c )),
(bizible2__Contact__r.Last_Touch_SQL__c ),
(bizible2__Lead__r.Last_Touch_SQL__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a Last Touch SQL value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</inlineHelpText>
        <label>Last Touch SQL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Late_Stage_Opportunity_Date__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a Late Stage Opportunity Date value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</description>
        <formula>IF(NOT(ISBLANK ( bizible2__Contact__c )), (bizible2__Contact__r.Late_Stage_Opportunity_Date__c),(bizible2__Lead__r.Late_Stage_Opportunity_Date__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a Late Stage Opportunity Date value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</inlineHelpText>
        <label>Late Stage Opportunity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Late_Stage_Opportunity__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a Late Stage Opportunity value from the corresponding field on the Contact Object and marks this field as TRUE it if it exists.</description>
        <formula>NOT ( ISBLANK (Late_Stage_Opportunity_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a Late Stage Opportunity value from the corresponding field on the Contact Object and marks this field as TRUE it if it exists.</inlineHelpText>
        <label>Late Stage Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Contact_Owner__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a Lead/Contact Owner value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</description>
        <formula>IF
(NOT(ISBLANK (bizible2__Contact__c )),
(bizible2__Contact__r.Contact_Account_Owner__c ),
(bizible2__Lead__r.Owner:User.Username ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a Lead/Contact Owner value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</inlineHelpText>
        <label>Lead/Contact Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Contact_Status__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a Lead/Contact Status value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</description>
        <formula>IF
(NOT(ISBLANK (bizible2__Contact__c )),
TEXT(bizible2__Contact__r.Contact_Status__c ),
TEXT(bizible2__Lead__r.Status )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a Lead/Contact Status value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</inlineHelpText>
        <label>Lead/Contact Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Grade__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Will populate the Lead Grade from either the Contact object or Lead object</description>
        <formula>IF
(NOT(ISBLANK (bizible2__Contact__c )),
TEXT(bizible2__Contact__r.Lead_Grade__c ),
TEXT(bizible2__Lead__r.Lead_Grade__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Will populate the Lead Grade from either the Contact object or Lead object</inlineHelpText>
        <label>Lead Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a Lead Source Detail value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</description>
        <formula>IF
(NOT(ISBLANK (bizible2__Contact__c )),
(bizible2__Contact__r.Lead_Source_Detail__c ),
(bizible2__Lead__r.Lead_Source_Detail__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a Lead Source Detail value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</inlineHelpText>
        <label>Lead Source Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Type__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a Lead Source Type value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</description>
        <formula>IF
(NOT(ISBLANK (bizible2__Contact__c )),
(bizible2__Contact__r.Lead_Source_Type__c ),
(bizible2__Lead__r.Lead_Source_Type__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a Lead Source Type value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</inlineHelpText>
        <label>Lead Source Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a Lead Source value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</description>
        <formula>IF
(NOT(ISBLANK (bizible2__Contact__c )),
TEXT(bizible2__Contact__r.LeadSource ),
TEXT(bizible2__Lead__r.LeadSource )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a Lead Source value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</inlineHelpText>
        <label>Lead Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MQL_Date__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a MQL Date value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</description>
        <formula>IF(NOT(ISBLANK ( bizible2__Contact__c )), (bizible2__Contact__r.MQL_Date__c),(bizible2__Lead__r.MQL_Date__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a MQL Date value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</inlineHelpText>
        <label>MQL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MQL_Original_Date__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a MQL Original Date value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</description>
        <formula>IF
(NOT(ISBLANK (bizible2__Contact__c )),
(bizible2__Contact__r.MQL_Original_Date__c ),
(bizible2__Lead__r.MQL_Original_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a MQL Original Date value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</inlineHelpText>
        <label>MQL Original Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MQL__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a MQL value from the corresponding field on the Contact Object and marks this field as TRUE it if it exists.</description>
        <formula>NOT ( ISBLANK (MQL_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a MQL value from the corresponding field on the Contact Object and marks this field as TRUE it if it exists.</inlineHelpText>
        <label>MQL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Qualified_Date__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a Marketing Qualified Date value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</description>
        <formula>IF
(NOT(ISBLANK (bizible2__Contact__c )),
(bizible2__Contact__r.Marketing_Qualified_Date__c ),
(bizible2__Lead__r.Marketing_Qualified_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a Marketing Qualified Date value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</inlineHelpText>
        <label>Marketing Qualified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meets_Enterprise_Criteria__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a Meets Enterprise Criteria value from the corresponding field on the Contact Object and marks this field as TRUE it if it exists.</description>
        <formula>IF
(NOT(ISBLANK (bizible2__Contact__c )),
(bizible2__Contact__r.Meets_Enterprise_Criteria__c ),
(bizible2__Lead__r.Meets_Enterprise_Criteria__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a Meets Enterprise Criteria value from the corresponding field on the Contact Object and marks this field as TRUE it if it exists.</inlineHelpText>
        <label>Meets Enterprise Criteria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meets_Mid_Market_Criteria__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Will populate true if either the related Contact object or Lead object field is marked true</description>
        <formula>IF(NOT(ISBLANK (bizible2__Contact__c)), (bizible2__Contact__r.Meets_Mid_Market_Criteria__c),(bizible2__Lead__r.Meets_Mid_Market_Criteria__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Will populate true if either the related Contact object or Lead object field is marked true</inlineHelpText>
        <label>Meets Mid-Market Criteria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Persona__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a Persona value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</description>
        <formula>IF
(NOT(ISBLANK (bizible2__Contact__c )),
TEXT(bizible2__Contact__r.Persona__c ),
TEXT(bizible2__Lead__r.Persona__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a Persona value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</inlineHelpText>
        <label>Persona</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Raw_Date__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a Raw Date value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</description>
        <formula>IF(NOT(ISBLANK ( bizible2__Contact__c )), (bizible2__Contact__r.Raw_Original_Date__c),(bizible2__Lead__r.Raw_Original_Date__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a Raw Date value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</inlineHelpText>
        <label>Raw Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Raw_Original_Date__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a Raw Original Date value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</description>
        <formula>IF
(NOT(ISBLANK (bizible2__Contact__c )),
(bizible2__Contact__r.Raw_Original_Date__c ),
(bizible2__Lead__r.Raw_Original_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a Raw Original Date value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</inlineHelpText>
        <label>Raw Original Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recycle_Date__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a Recycle Date value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</description>
        <formula>IF(NOT(ISBLANK ( bizible2__Contact__c )), (bizible2__Contact__r.Recycle_Date__c),(bizible2__Lead__r.Recycle_Date__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a Recycle Date value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</inlineHelpText>
        <label>Recycle Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recycle__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a Recycle value from the corresponding field on the Contact Object and marks this field as TRUE it if it exists.</description>
        <formula>NOT ( ISBLANK (Recycle_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a Recycle value from the corresponding field on the Contact Object and marks this field as TRUE it if it exists.</inlineHelpText>
        <label>Recycle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Regional_Territory__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a Regional Territory value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</description>
        <formula>IF
(NOT(ISBLANK (bizible2__Contact__c )),
(bizible2__Contact__r.RegionalTerritoryContact__c	 ),
(bizible2__Lead__r.RegionalTerritoryLead__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a Regional Territory value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</inlineHelpText>
        <label>Regional Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAL_Date__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a SAL Date value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</description>
        <formula>IF(NOT(ISBLANK ( bizible2__Contact__c )), (bizible2__Contact__r.SAL_Date__c),(bizible2__Lead__r.SAL_Date__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a SAL Date value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</inlineHelpText>
        <label>SAL Date</label>
        <type>Date</type>
    </fields>
</CustomObject>